# vs_colorfix

./: LICENSE  README.md  pyproject.toml  vs_colorfix.py
vs_colorfix/: __init__.py  average_color_fix.py  wavelet_color_fix.py
vs_colorfix/models/: waveletcolorfix_w10_c1_fp16.onnx  waveletcolorfix_w10_c1_fp32.onnx  waveletcolorfix_w10_c3_fp16.onnx  waveletcolorfix_w10_c3_fp32.onnx  waveletcolorfix_w1_c1_fp16.onnx  waveletcolorfix_w1_c1_fp32.onnx  waveletcolorfix_w1_c3_fp16.onnx  waveletcolorfix_w1_c3_fp32.onnx  waveletcolorfix_w2_c1_fp16.onnx  waveletcolorfix_w2_c1_fp32.onnx  waveletcolorfix_w2_c3_fp16.onnx  waveletcolorfix_w2_c3_fp32.onnx  waveletcolorfix_w3_c1_fp16.onnx  waveletcolorfix_w3_c1_fp32.onnx  waveletcolorfix_w3_c3_fp16.onnx  waveletcolorfix_w3_c3_fp32.onnx  waveletcolorfix_w4_c1_fp16.onnx  waveletcolorfix_w4_c1_fp32.onnx  waveletcolorfix_w4_c3_fp16.onnx  waveletcolorfix_w4_c3_fp32.onnx  waveletcolorfix_w5_c1_fp16.onnx  waveletcolorfix_w5_c1_fp32.onnx  waveletcolorfix_w5_c3_fp16.onnx  waveletcolorfix_w5_c3_fp32.onnx  waveletcolorfix_w6_c1_fp16.onnx  waveletcolorfix_w6_c1_fp32.onnx  waveletcolorfix_w6_c3_fp16.onnx  waveletcolorfix_w6_c3_fp32.onnx  waveletcolorfix_w7_c1_fp16.onnx  waveletcolorfix_w7_c1_fp32.onnx  waveletcolorfix_w7_c3_fp16.onnx  waveletcolorfix_w7_c3_fp32.onnx  waveletcolorfix_w8_c1_fp16.onnx  waveletcolorfix_w8_c1_fp32.onnx  waveletcolorfix_w8_c3_fp16.onnx  waveletcolorfix_w8_c3_fp32.onnx  waveletcolorfix_w9_c1_fp16.onnx  waveletcolorfix_w9_c1_fp32.onnx  waveletcolorfix_w9_c3_fp16.onnx  waveletcolorfix_w9_c3_fp32.onnx
