[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_colorfix"
version = "2.0.0"
description = "Color Fix, Color Transfer, or Color Match functions for Vapoursynth"
authors = [{ name = "pifroggi" }]
license = "Apache-2.0"
license-files = ["LICENSE"]

[tool.setuptools.package-data]
vs_colorfix = ["models/*.onnx"]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_colorfix"
Repository = "https://github.com/pifroggi/vs_colorfix"
